Footer: add credits section

--- a/themes/hugo-creative-theme/layouts/index.html
+++ b/themes/hugo-creative-theme/layouts/index.html
@@ -32,6 +32,10 @@
             {{ partial "partners.html" . }}
         {{ end }}
 
+        {{ if .Site.Params.credits}}
+            {{ partial "credits.html" . }}
+        {{ end }}
+
         {{ if .Site.Data.projects }}
             {{ partial "modals.html" . }}
         {{ end }}
