--- a/themes/hugo-creative-theme/layouts/partials/nav.html
+++ b/themes/hugo-creative-theme/layouts/partials/nav.html
@@ -15,25 +15,25 @@
         </div>
         {{ "<!-- Collect the nav links, forms, and other content for toggling -->" | safeHTML }}
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-            <ul class="nav navbar-nav navbar-right">
+     t      <ul class="nav navbar-nav navbar-right">
                 {{ if and .Site.Params.about .Site.Params.navigation.links.about }}
                     <li>
-                        <a class="page-scroll" href="#about">{{ .Site.Params.navigation.links.about }}</a>
+                        <a href="about">{{ .Site.Params.navigation.links.about }}</a>
                     </li>
                 {{ end }}
                 {{ if and .Site.Params.speakers.list .Site.Params.navigation.links.speakers }}
                     <li>
-                        <a class="page-scroll" href="#speakers">{{ .Site.Params.navigation.links.speakers }}</a>
+                        <a href="schedule">{{ .Site.Params.navigation.links.speakers }}</a>
                     </li>
                 {{ end }}
 
                 {{ if and .Site.Params.events .Site.Params.navigation.links.events}}
                     <li>
-                        <a class="page-scroll" href="#events">{{ .Site.Params.navigation.links.events}}</a>
+                        <a href="events">{{ .Site.Params.navigation.links.events}}</a>
                     </li>
                 {{ end }}
 
-                {{ if and .Site.Params.about .Site.Params.navigation.links.venue}}
+                {{ if and .Site.Params.venue .Site.Params.navigation.links.venue}}
                     <li>
                         <a class="page-scroll" href="#venue">{{ .Site.Params.navigation.links.venue}}</a>
                     </li>
