Static pages: remove unused code and fix styling

--- a/themes/hugo-creative-theme/static/css/creative.css
+++ b/themes/hugo-creative-theme/static/css/creative.css
@@ -81,6 +81,21 @@ aside, #credits {
     padding: 50px 0;
 }
 
+.article {
+    padding: 50px;
+}
+
+.container {
+  position: relative;
+  display: block;
+}
+
+#credits {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+}
+
 .small-text {
   font-size: 12px;
 }
