--- a/themes/hugo-creative-theme/layouts/partials/nav.html
+++ b/themes/hugo-creative-theme/layouts/partials/nav.html
@@ -1,6 +1,6 @@
 {{ "<!-- NAVIGATION -->" | safeHTML }}
 <nav id="mainNav" class="navbar navbar-default navbar-fixed-top">
-    <div class="container-fluid">
+    <div class="container-fluid gopher-nav">
         {{ "<!-- Brand and toggle get grouped for better mobile display -->" | safeHTML }}
         <div class="navbar-header">
             <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
@@ -10,26 +10,26 @@
                 <span class="icon-bar"></span>
             </button>
             {{ with .Site.Params.navigation.brand }}
-                <a class="navbar-brand page-scroll" href="#page-top">{{ . | markdownify }}</a>
+                <a class="navbar-brand" href="/">{{ . | markdownify }}</a>
             {{ end }}
         </div>
         {{ "<!-- Collect the nav links, forms, and other content for toggling -->" | safeHTML }}
-        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+        <div class="collapse navbar-collapse gopher-nav" id="bs-example-navbar-collapse-1">
      t      <ul class="nav navbar-nav navbar-right">
                 {{ if and .Site.Params.about .Site.Params.navigation.links.about }}
                     <li>
-                        <a href="about">{{ .Site.Params.navigation.links.about }}</a>
+                        <a href="/about">{{ .Site.Params.navigation.links.about }}</a>
                     </li>
                 {{ end }}
                 {{ if and .Site.Params.speakers.list .Site.Params.navigation.links.speakers }}
                     <li>
-                        <a href="schedule">{{ .Site.Params.navigation.links.speakers }}</a>
+                        <a href="/schedule">{{ .Site.Params.navigation.links.speakers }}</a>
                     </li>
                 {{ end }}
 
                 {{ if and .Site.Params.events .Site.Params.navigation.links.events}}
                     <li>
-                        <a href="events">{{ .Site.Params.navigation.links.events}}</a>
+                        <a href="/events">{{ .Site.Params.navigation.links.events}}</a>
                     </li>
                 {{ end }}
 
