--- a/themes/hugo-creative-theme/layouts/partials/nav.html
+++ b/themes/hugo-creative-theme/layouts/partials/nav.html
@@ -35,7 +35,7 @@
 
                 {{ if and .Site.Params.venue .Site.Params.navigation.links.venue}}
                     <li>
-                        <a class="page-scroll" href="#venue">{{ .Site.Params.navigation.links.venue}}</a>
+                        <a href="/venue">{{ .Site.Params.navigation.links.venue}}</a>
                     </li>
                 {{ end }}
 
