--- a/themes/hugo-creative-theme/layouts/partials/nav.html
+++ b/themes/hugo-creative-theme/layouts/partials/nav.html
@@ -22,8 +22,15 @@
                     </li>
                 {{ end }}
                 {{ if and .Site.Params.speakers.list .Site.Params.navigation.links.speakers }}
-                    <li>
-                        <a href="/schedule">{{ .Site.Params.navigation.links.speakers }}</a>
+                    <li class="dropdown">
+                        <a href="#" class="dropdown-menutoggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Schedule<span class="caret"></span></a>
+                        <ul class="dropdown-menu" aria-labelledby="dropdownMenu1">
+                            <li><a href="/speakers">Speakers</a></li>
+                            <li><a href="/programme">Programme</a></li>
+                            <li role="separator" class="divider"></li>
+                            <li><a href="/workshop">Workshop</a></li>
+                        </ul>
+
                     </li>
                 {{ end }}
 
