Add Partners static page

--- a/themes/hugo-creative-theme/layouts/partials/nav.html
+++ b/themes/hugo-creative-theme/layouts/partials/nav.html
@@ -48,7 +48,7 @@
 
                 {{ if and .Site.Params.partners .Site.Params.navigation.links.partners }}
                     <li>
-                        <a class="page-scroll" href="#partners">{{ .Site.Params.navigation.links.partners }}</a>
+                        <a href="/partners">{{ .Site.Params.navigation.links.partners }}</a>
                     </li>
                 {{ end }}
             </ul>
