Add tickets btn on nav

--- a/themes/hugo-creative-theme/layouts/partials/hero.html
+++ b/themes/hugo-creative-theme/layouts/partials/hero.html
@@ -9,7 +9,7 @@
                 <hr>
             {{ end }}
             {{ with .Site.Params.hero.buttonText }}
-                <a href="#about" class="btn btn-primary btn-xl page-scroll">{{ . }}</a>
+                <a href="#" class="btn btn-primary btn-xl register-btn">{{ . }}</a>
             {{ end }}
         </div>
     </div>
