--- a/themes/hugo-creative-theme/layouts/partials/nav.html
+++ b/themes/hugo-creative-theme/layouts/partials/nav.html
@@ -50,6 +50,10 @@
                     <li>
                         <a href="/partners">{{ .Site.Params.navigation.links.partners }}</a>
                     </li>
+                    <li>
+
+                        <a href="#" class="btn btn-primary tickets-btn">Tickets</a>
+                    </li>
                 {{ end }}
             </ul>
         </div>
