--- a/themes/hugo-creative-theme/layouts/partials/speakers.html
+++ b/themes/hugo-creative-theme/layouts/partials/speakers.html
@@ -18,7 +18,7 @@
                     <div class="profile-img"></div>
                     <h3>{{ .title }}</h3>
                     {{ with .description }}
-                        <p class="text-muted">{{ . }}</p>
+                        <p class="text-muted">{{ . | markdownify }}</p>
                     {{ end }}
                 </div>
             </div>
