Make cover image responsive

--- a/themes/hugo-creative-theme/layouts/partials/hero.html
+++ b/themes/hugo-creative-theme/layouts/partials/hero.html
@@ -10,7 +10,10 @@
             {{ with .Site.Params.hero.buttonText }}
                 <a href="#" class="btn btn-primary btn-xl register-btn">{{ . }}</a>
             {{ end }}
-            <img class="cover-img" src="../../img/header.jpg" />
+            <div class="cover-img">
+              <img class="img-responsive" src="../../img/header.jpg" />
+            </div>
+
         </div>
     </div>
 </header>
