Fix ticket link alignment on responsive drop down nav

--- a/themes/hugo-creative-theme/layouts/partials/nav.html
+++ b/themes/hugo-creative-theme/layouts/partials/nav.html
@@ -52,7 +52,7 @@
                     </li>
                     <li>
 
-                        <a href="#" class="btn btn-primary tickets-btn">Tickets</a>
+                        <a href="#" class="tickets-btn">Tickets</a>
                     </li>
                 {{ end }}
             </ul>
