Rename aside -> venue

--- a/themes/hugo-creative-theme/layouts/index.html
+++ b/themes/hugo-creative-theme/layouts/index.html
@@ -24,8 +24,8 @@
             {{ partial "portfolio.html" . }}
         {{ end }}
 
-        {{ if .Site.Params.aside }}
-            {{ partial "aside.html" . }}
+        {{ if .Site.Params.venue }}
+            {{ partial "venue.html" . }}
         {{ end }}
 
         {{ if .Site.Params.partners }}
