Put a date estimate instead of a precise date

--- a/themes/hugo-creative-theme/layouts/partials/hero.html
+++ b/themes/hugo-creative-theme/layouts/partials/hero.html
@@ -3,7 +3,7 @@
     <div class="header-content">
         <div class="header-content-inner">
             <h1 class="cover-title">GopherCon Singapore<h1>
-                <h4 class="cover-subtitle">9<sup>th</sup> - 11<sup>th </sup> April 2017<h1>
+                <h4 class="cover-subtitle">Mid 2017.. details to be confirmed soon!<h1>
             {{ if and .Site.Params.hero.slogan .Site.Params.hero.subtitle }}
                 <hr>
             {{ end }}
