update header and hero image to new logo

--- a/themes/hugo-creative-theme/layouts/partials/nav.html
+++ b/themes/hugo-creative-theme/layouts/partials/nav.html
@@ -15,7 +15,7 @@
         </div>
         {{ "<!-- Collect the nav links, forms, and other content for toggling -->" | safeHTML }}
         <div class="collapse navbar-collapse gopher-nav" id="bs-example-navbar-collapse-1">
-     t      <ul class="nav navbar-nav navbar-right">
+           <ul class="nav navbar-nav navbar-right">
                 {{ if and .Site.Params.about .Site.Params.navigation.links.about }}
                     <li>
                         <a href="/about">{{ .Site.Params.navigation.links.about }}</a>
