--- a/themes/hugo-creative-theme/layouts/partials/hero.html
+++ b/themes/hugo-creative-theme/layouts/partials/hero.html
@@ -2,18 +2,17 @@
 <header>
     <div class="header-content">
         <div class="header-content-inner">
-            <h1 class="cover-title">GopherCon Singapore<h1>
-                <h4 class="cover-subtitle">Mid 2017<h1>
+            <h2 class="cover-title">GopherCon Singapore</h2>
+            <div class="cover-img">
+              <img class="img-responsive" src="../../img/header.png" />
+            </div>
+            <h2 class="cover-subtitle">Mid 2017</h2>
             {{ if and .Site.Params.hero.slogan .Site.Params.hero.subtitle }}
                 <hr>
             {{ end }}
             {{ with .Site.Params.hero.buttonText }}
                 <a href="#" class="btn btn-primary btn-xl register-btn">{{ . }}</a>
             {{ end }}
-            <div class="cover-img">
-              <img class="img-responsive" src="../../img/header.jpg" />
-            </div>
-
         </div>
     </div>
 </header>
