update cover page & font-family

--- a/themes/hugo-creative-theme/layouts/partials/hero.html
+++ b/themes/hugo-creative-theme/layouts/partials/hero.html
@@ -2,7 +2,7 @@
 <header>
     <div class="header-content">
         <div class="header-content-inner">
-            <h2 class="cover-title">GopherCon Singapore</h2>
+            <h3 class="cover-title">The first and largest community-driven Go conference in Southeast Asia!</h3>
             <div class="cover-img">
               <img class="img-responsive" src="../../img/header.png" />
             </div>
@@ -13,6 +13,7 @@
             {{ with .Site.Params.hero.buttonText }}
                 <a href="#" class="btn btn-primary btn-xl register-btn">{{ . }}</a>
             {{ end }}
+            <a href="#" class="btn btn-primary btn-xl register-btn">Call for Proposal</a>
         </div>
     </div>
 </header>
