--- a/themes/hugo-creative-theme/layouts/partials/hero.html
+++ b/themes/hugo-creative-theme/layouts/partials/hero.html
@@ -14,7 +14,7 @@
             {{ with .Site.Params.hero.buttonText }}
             <a href="#" class="btn btn-primary btn-xl register-btn">{{ . }}</a>
             {{ end }}
-            <a href="#" class="btn btn-primary btn-xl register-btn">Call for Proposal</a>
+            <a href="https://www.papercall.io/gopherconsg2017" class="btn btn-primary btn-xl register-btn">Call for Proposal</a>
             </div>
         </div>
     </div>
