revert change email

--- a/themes/hugo-creative-theme/layouts/partials/credits.html
+++ b/themes/hugo-creative-theme/layouts/partials/credits.html
@@ -11,7 +11,7 @@
                       <hr class="light">
                   {{ end }}
                   {{ with .Site.Params.credits.description }}
-                  <a href="mailto:gopherconsg@gmail.com">
+                  <a href="mailto:hello@gophercon.sg">
                     <p class="text-faded">{{ . | markdownify }}</p></a>
                   {{ end }}
                   <div class="credit-text medium-text">&copy Copyright GopherCon.SG 2017</a></div>
