Use direct link to ticket service

--- a/themes/hugo-creative-theme/layouts/partials/nav.html
+++ b/themes/hugo-creative-theme/layouts/partials/nav.html
@@ -52,7 +52,7 @@
                     </li>
                     <li>
 
-                        <a href="#" class="tickets-btn">Tickets</a>
+                        <a href="http://www.ticketbase.com/events/gopherconsg2017" class="tickets-btn">Tickets</a>
                     </li>
                 {{ end }}
             </ul>
