--- a/themes/hugo-creative-theme/layouts/partials/hero.html
+++ b/themes/hugo-creative-theme/layouts/partials/hero.html
@@ -12,7 +12,7 @@
             {{ end }}
             <div class="btns-list">
             {{ with .Site.Params.hero.buttonText }}
-            <a href="#" class="btn btn-primary btn-xl register-btn">{{ . }}</a>
+            <a href="http://www.ticketbase.com/events/gopherconsg2017" class="btn btn-primary btn-xl register-btn">{{ . }}</a>
             {{ end }}
             <a href="https://www.papercall.io/gopherconsg2017" class="btn btn-primary btn-xl register-btn">Call for Proposal</a>
             </div>
