--- a/themes/hugo-creative-theme/layouts/partials/hero.html
+++ b/themes/hugo-creative-theme/layouts/partials/hero.html
@@ -2,11 +2,11 @@
 <header>
     <div class="header-content">
         <div class="header-content-inner">
-            <h3 class="cover-title">The first and largest community-driven Go conference in Southeast Asia!</h3>
+            <h3 class="cover-title">The first and largest Go conference in Southeast Asia!</h3>
             <div class="cover-img">
               <img class="img-responsive" src="../../img/header.png" />
             </div>
-            <h2 class="cover-subtitle">Mid 2017</h2>
+            <h2 class="cover-subtitle">25 - 26 May 2017</h2>
             {{ if and .Site.Params.hero.slogan .Site.Params.hero.subtitle }}
                 <hr>
             {{ end }}
