Add venue information.
Enable venue link on nav bar.

--- a/themes/hugo-creative-theme/layouts/partials/nav.html
+++ b/themes/hugo-creative-theme/layouts/partials/nav.html
@@ -42,7 +42,7 @@
 
                 {{ if and .Site.Params.venue .Site.Params.navigation.links.venue }}
                     <li>
-                        <a href="#">{{ .Site.Params.navigation.links.venue }}</a>
+                        <a href="/venue">{{ .Site.Params.navigation.links.venue }}</a>
                     </li>
                 {{ end }}
 
