--- a/themes/hugo-creative-theme/layouts/partials/nav.html
+++ b/themes/hugo-creative-theme/layouts/partials/nav.html
@@ -21,14 +21,16 @@
                         <a href="#">{{ .Site.Params.navigation.links.about }}</a>
                     </li>
                 {{ end }}
+                    <li>
+                        <a href="/workshop">{{ .Site.Params.navigation.links.workshop }}</a>
+                    </li>
+
                 {{ if and .Site.Params.speakers.list .Site.Params.navigation.links.speakers }}
                     <li class="dropdown">
                         <a href="#" class="dropdown-menutoggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Schedule<span class="caret"></span></a>
                         <ul class="dropdown-menu" aria-labelledby="dropdownMenu1">
                             <li><a href="#">Speakers</a></li>
                             <li><a href="#">Programme</a></li>
-                            <li role="separator" class="divider"></li>
-                            <li><a href="#">Workshop</a></li>
                         </ul>
 
                     </li>
