Fix color when hovering in affix css

--- a/themes/hugo-creative-theme/static/css/creative.css
+++ b/themes/hugo-creative-theme/static/css/creative.css
@@ -235,7 +235,7 @@ figure.twitter-logo img {
 
     .navbar-default.affix .nav > li>a:hover,
     .navbar-default.affix .nav>li>a:focus:hover {
-        color: #e84661;
+        color: white;
     }
 }
 
